# uncertainty_quantification

./: .gitignore  COMPLETE_SYSTEM_STATUS.md  DELIVERABLES.md  DELIVERY_SUMMARY.md  FRAMEWORK_OVERVIEW.txt  FUSIONGP_UQ_GUIDE.md  FUSIONGP_UQ_INDEX.md  GETTING_STARTED.md  GP_UQ_SYSTEM_SUMMARY.md  HOW_TO_RUN.md  IMPLEMENTATION_COMPLETE.md  LICENSE  QUICKSTART_4DAYS.md  QUICK_REFERENCE_FUSIONGP.md  README.md  RUN_EXPERIMENTS.md  RUN_FUSIONGP_UQ.md  SUCCESS_SUMMARY.md  SUMMARY.md  UQ_CHAPTER_20PAGE_OUTLINE.aux  UQ_CHAPTER_20PAGE_OUTLINE.fdb_latexmk  UQ_CHAPTER_20PAGE_OUTLINE.fls  UQ_CHAPTER_20PAGE_OUTLINE.out  UQ_CHAPTER_20PAGE_OUTLINE.tex  VISUALIZATION_GUIDE.md  VISUALIZATION_SUCCESS.md  config.py  pyproject.toml  reproduce_paper.sh  requirements.txt  run.py  run_validation.py  test_installation.py
docs/: DEFENSE_CHEAT_SHEET.md  MATHEMATICAL_FOUNDATIONS_UQ.md
examples/: fusiongp_uq_complete_example.py  visualization_demo.py
experiments/: README.md  __init__.py  comprehensive_validation.py  reproduce_paper.py  visualization_demo.py
notebooks/: UQ.ipynb
results/: paper_results.txt
results/raw_data/: all_results.json
results/tables/: decision_report.csv
src/: analytical_uq_dublin.py  epa_station_uq.py  fusiongp_uq_system.py  generate_predictions.py  kriging_gpr_demo.py  mc_uq_dublin.py
src/legacy/: fusiongp_uq_system.py
src/legacy/decision/: __init__.py  policy_translation.py
src/legacy/integration/: __init__.py  fusiongp_adapter.py
src/legacy/literature_extraction/: __init__.py  pdf_content_extractor.py
src/legacy/uncertainty/: hierarchical.py  ood_detection.py  reliability_analysis.py  second_order.py
src/literature_extraction/: pdf_extractor.py
src/models/: __init__.py  ensemble.py  fusion_svgp.py  prior_mean.py
src/uncertainty/: __init__.py  calibration.py  conformal.py  decomposition.py  hierarchical.py  sensitivity_analysis.py  taylor_propagation.py
src/visualization/: gp_plots.py
tests/: test_fusion_svgp.py  test_monte_carlo.py
